# appbase

./: CMakeLists.txt  README.md  application.cpp
cmake/: AppBaseConfig.cmake.in
examples/: CMakeLists.txt  main.cpp  yarp_plugin.h
include/appbase/: application.hpp  plugin.hpp
